Remove unused CSS selectors

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -14,8 +14,7 @@ b{
 }
 
 *[epub|type~="z3998:poem"] p + p,
-*[epub|type~="z3998:song"] p + p,
-*[epub|type~="z3998:verse"] p + p{
+*[epub|type~="z3998:song"] p + p{
 	margin-top: 1em;
 }
 
