--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -88,9 +88,9 @@ figure img{
 figure.full-page{
 	margin: 0;
 	max-height: 100%;
-	page-break-before: always;
-	page-break-after: always;
-	page-break-inside: avoid;
+	break-before: page;
+	break-after: page;
+	break-inside: avoid;
 	text-align: center;
 }
 
@@ -106,6 +106,7 @@ figure + p{
 [epub|type~="epigraph"]{
 	font-style: italic;
 	hyphens: none;
+	-epub-hyphens: none;
 }
 
 [epub|type~="epigraph"] em{
