--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -81,12 +81,24 @@ figure img{
 }
 
 figure.full-page{
+	break-after: page;
+	break-before: page;
+	break-inside: avoid;
 	margin: 0;
 	max-height: 100%;
-	break-before: page;
-	break-after: page;
-	break-inside: avoid;
 	text-align: center;
+}
+
+@supports(display: flex) and (max-height: 100vh){
+	figure.full-page{
+		display: flex;
+		flex-direction: column;
+		max-height: 100vh;
+	}
+
+	figure.full-page img{
+		height: 100%;
+	}
 }
 
 figure.half-page img{
