Update full-page figure CSS to new standard

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -101,6 +101,14 @@ figure.full-page{
 	}
 }
 
+@supports(display: grid){
+	figure.full-page{
+		display: grid;
+		grid-template-rows: 1fr auto;
+		max-height: 100%;
+	}
+}
+
 figure.half-page img{
 	max-width: 50%;
 }
